--- a/MANGETECH/front/mangetech/package.json
+++ b/MANGETECH/front/mangetech/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@pinia/nuxt": "^0.11.2",
     "@primeuix/themes": "^1.2.5",
     "@primevue/nuxt-module": "^4.4.1",
     "nuxt": "^4.1.3",
+    "pinia": "^3.0.3",
     "primevue": "^4.4.1",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
