--- a/MANGETECH/front/mangetech/package.json
+++ b/MANGETECH/front/mangetech/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "sass": "^1.93.2"
+    "sass": "^1.93.2",
+    "typescript": "^5.9.3"
   }
 }
